# ExpressionTruthTable

./: CMakeLists.txt  README.md  arrayList.h  main.cpp  stack.h  test.cpp
inc/: arrayList.h  expressionTruthTable.h  stack.h
src/: arrayList.cpp  expressionTruthTable.cpp  stack.cpp
